update markdown with paper title

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Edge Reasoning Evaluation Framework\n",
+        "# Edge Reasoning LLM Deployment Evaluation\n",
         "This notebook provides an interactive workflow for reproducing the evaluation results in our paper. It supports both **server** and **Tegra** platforms.\n",
         "\n",
         "### Quick Navigation\n",
